fix scrollbar corner color

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,8 @@ body {
 
 /* global scrollbars */
 *::-webkit-scrollbar{
-  border-radius: 100%;
+  height: 10px;
+  width: 10px;
 }
 
 *:hover::-webkit-scrollbar-thumb {
@@ -24,10 +25,13 @@ body {
 
 *::-webkit-scrollbar-thumb {
   background: transparent;
-  border-radius: 10px;
 }
 
 *::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-corner {
   background: transparent;
 }
 
